Fix member image cropping

--- a/src/components/atoms/MemberCard/membercard.module.scss
+++ b/src/components/atoms/MemberCard/membercard.module.scss
@@ -45,6 +45,7 @@
   display: block;
   height: 100%;
   object-fit: cover;
+  object-position: top;
   transform-origin: center;
   width: 100%;
 }
